fix: contact-page map spacing sm

--- a/css/style.css
+++ b/css/style.css
@@ -11945,13 +11945,18 @@ ul.children {
 }
 
 @media only screen and (min-width: 0px) and (max-width: 768px) {
+  .contact-form-area > .elementor-container {
+    padding: 0 30px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 768px) {
   .contact-form-area .elementor-container .elementor-column {
     width: 100% !important;
   }
 }
 @media only screen and (min-width: 0px) and (max-width: 768px) {
   .contact-form-area .elementor-container .elementor-column .map-widget.style-2 {
-    padding: 0 30px;
+    padding: 30px 30px 0 30px;
   }
 }
 
