--- a/sass/pages/_contact.scss
+++ b/sass/pages/_contact.scss
@@ -142,6 +142,11 @@
 
 // Theme 
 .contact-form-area {
+    >.elementor-container{
+        @media only screen and (min-width: 0px) and (max-width: 768px){
+            padding: 0 30px;
+        }
+    }
     .elementor-container{
         .elementor-column{
             @media only screen and (min-width: 0px) and (max-width: 768px){
@@ -150,7 +155,7 @@
             .map-widget{
                 &.style-2{
                     @media only screen and (min-width: 0px) and (max-width: 768px){
-                        padding: 0 30px;
+                        padding: 30px 30px 0 30px;
                     }
                 }
             }
